--- a/opsk.yaml
+++ b/opsk.yaml
@@ -1,16 +1,15 @@
---- 
-  version: '0.5.1'
-  name: redis
-  includes: 
-    - Puppetfile
-    - modules
-    - manifests
-    - hieradata
-    - hiera.yaml
-    - Gemfile
-    - Gemfile.lock
-    - opsk.yaml
-    - LICENSE-2.0.txt
-    - run.sh
-    - boot.sh
-
+---
+:version: 0.5.2
+:name: redis
+:includes:
+- Puppetfile
+- modules
+- manifests
+- hieradata
+- hiera.yaml
+- Gemfile
+- Gemfile.lock
+- opsk.yaml
+- LICENSE-2.0.txt
+- run.sh
+- boot.sh
